# TigerCompiler_Cpp

./: .gitignore  CMakeLists.txt  Readme.md
scripts/: LoopBuild.sh  SetupGtest.sh
src/: AST.cpp  AST.h  CMakeLists.txt  Calc.cpp  Calc.h  CompileTimeErrorHandler.cpp  CompileTimeErrorHandler.h  Compiler.cpp  Compiler.h  CustomExceptions.h  Environments.cpp  Environments.h  ErrorCodes.cpp  ErrorCodes.h  EscapeCalculator.cpp  EscapeCalculator.h  Frame.h  Lexer.cpp  Lexer.h  Main.cpp  Parser.cpp  Parser.h  Position.cpp  Position.h  PositionCountingStream.cpp  PositionCountingStream.h  Symbol.cpp  Symbol.h  SymbolTable.h  Temps.cpp  Temps.h  TokenStream.cpp  TokenStream.h  Tokens.cpp  Tokens.h  Translate.cpp  Translate.h  TreeIR.cpp  TreeIR.h  Types.cpp  (+2 more)
src/Platform_Specific/x86/: Frame_x86.cpp
tests/: ASTTest.cpp  AccessTest.cpp  CMakeLists.txt  CalcTest.cpp  EndToEndTests.cpp  EnvironmentsTest.cpp  EscapeCalculatorTest.cpp  FrameTest.cpp  LevelTest.cpp  LexerTest.cpp  ParserTest.cpp  PositionCountingStreamTest.cpp  SymbolTableTest.cpp  SymbolTest.cpp  TempsTest.cpp  TokenStreamTest.cpp  TokensTest.cpp  TypeTest.cpp
tests/TestPrograms/: queens.tig  test50.tig  test51.tig  test52.tig  test53.tig  test54.tig  test55.tig  test8.tig
